Fix jumping MediaHub FAQ accordions on open and close.
Align grid/answer styles with home FAQ, isolate open CSS during JS animation, refresh Lenis after toggle.

--- a/assets/scss/pages/_front-page.scss
+++ b/assets/scss/pages/_front-page.scss
@@ -1330,6 +1330,7 @@ $home-gradient-sphere-url: "https://lavenderblush-bat-855084.hostingersite.com/w
   gap: #{mixins.vw(20px)};
   margin-top: #{mixins.vw(64px)};
   text-align: left;
+  align-items: start;
 
   @include mixins.mobile {
     grid-template-columns: 1fr;
@@ -1342,6 +1343,9 @@ $home-gradient-sphere-url: "https://lavenderblush-bat-855084.hostingersite.com/w
   display: flex;
   flex-direction: column;
   gap: #{mixins.vw(20px)};
+  align-self: start;
+  width: 100%;
+  min-width: 0;
 
   @include mixins.mobile {
     gap: #{mixins.mvw(12px)};
@@ -1417,6 +1421,7 @@ $home-gradient-sphere-url: "https://lavenderblush-bat-855084.hostingersite.com/w
   overflow: hidden;
   max-height: 0;
   opacity: 0;
+  box-sizing: border-box;
   transition:
     max-height 450ms cubic-bezier(0.33, 1, 0.68, 1),
     opacity 380ms cubic-bezier(0.33, 1, 0.68, 1),
@@ -1426,7 +1431,12 @@ $home-gradient-sphere-url: "https://lavenderblush-bat-855084.hostingersite.com/w
   font-size: #{mixins.vw(15px)};
   line-height: 1.5;
 
-  .home-faq__item[open] & {
+  p {
+    margin: 0;
+  }
+
+  .home-faq__item[open]:not(.is-faq-animating) & {
+    max-height: none;
     opacity: 1;
     padding-bottom: #{mixins.vw(24px)};
   }
@@ -1435,7 +1445,7 @@ $home-gradient-sphere-url: "https://lavenderblush-bat-855084.hostingersite.com/w
     padding: 0 #{mixins.mvw(16px)};
     font-size: #{mixins.mvw(13px)};
 
-    .home-faq__item[open] & {
+    .home-faq__item[open]:not(.is-faq-animating) & {
       padding-bottom: #{mixins.mvw(16px)};
     }
   }
