--- a/assets/scss/pages/_product-mediahub-page.scss
+++ b/assets/scss/pages/_product-mediahub-page.scss
@@ -1678,6 +1678,8 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: #{mixins.vw(20px)};
   margin-top: #{mixins.vw(64px)};
+  text-align: left;
+  align-items: start;
 
   @include mixins.mobile {
     grid-template-columns: 1fr;
@@ -1690,6 +1692,9 @@
   display: flex;
   flex-direction: column;
   gap: #{mixins.vw(20px)};
+  align-self: start;
+  width: 100%;
+  min-width: 0;
 
   @include mixins.mobile {
     gap: #{mixins.mvw(12px)};
@@ -1701,6 +1706,7 @@
   border: 1px solid #0073e6;
   background: #000102;
   overflow: hidden;
+  box-sizing: border-box;
 
   @include mixins.mobile {
     border-radius: #{mixins.mvw(8px)};
@@ -1716,6 +1722,7 @@
   padding: #{mixins.vw(24px)} #{mixins.vw(32px)};
   cursor: pointer;
   list-style: none;
+  user-select: none;
 
   &::-webkit-details-marker {
     display: none;
@@ -1732,8 +1739,11 @@
 }
 
 .mediahub-faq__question-text {
+  flex: 1 1 0;
+  min-width: 0;
   color: #ffffff;
   font-size: #{mixins.vw(16px)};
+  font-weight: 400;
   line-height: 1.36;
 
   @include mixins.mobile {
@@ -1747,7 +1757,7 @@
   width: #{mixins.vw(14px)};
   height: #{mixins.vw(14px)};
   flex: 0 0 #{mixins.vw(14px)};
-  transition: transform 300ms ease;
+  transition: transform 400ms cubic-bezier(0.33, 1, 0.68, 1);
 
   &::before {
     position: absolute;
@@ -1776,6 +1786,7 @@
   max-height: 0;
   overflow: hidden;
   opacity: 0;
+  box-sizing: border-box;
   padding: 0 #{mixins.vw(32px)};
   color: #ffffff;
   font-size: #{mixins.vw(15px)};
@@ -1786,10 +1797,12 @@
     padding 450ms cubic-bezier(0.33, 1, 0.68, 1);
 
   p {
+    margin: 0;
     color: #ffffff;
   }
 
-  .mediahub-faq__item[open] & {
+  .mediahub-faq__item[open]:not(.is-faq-animating) & {
+    max-height: none;
     opacity: 1;
     padding-bottom: #{mixins.vw(24px)};
   }
@@ -1798,7 +1811,7 @@
     padding: 0 #{mixins.mvw(16px)};
     font-size: #{mixins.mvw(13px)};
 
-    .mediahub-faq__item[open] & {
+    .mediahub-faq__item[open]:not(.is-faq-animating) & {
       padding-bottom: #{mixins.mvw(16px)};
     }
   }
